--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 </H1>
 
 <H2>
- TL;DR baseless claims notwithstanding, LLMs cannot properly play chess - i.e. do position evaluation
+ TL;DR baseless claims notwithstanding, <u>LLMs cannot properly play chess</u>
+  <p>- i.e. do position evaluation</u>
 </H2>
 
 <P>
