--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <H2>
  TL;DR baseless claims notwithstanding, <u>LLMs cannot properly play chess</u>
-  <p>- i.e. do position evaluation</u>
+  <p>- i.e. actually evaluate positions </u>
 </H2>
 
 <P>
