--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ I plan to release quantitative data relevant to the subject - something that has
 </P>
 
 There is a lot of confusion about this, because GPT is excellent at pretending. Its algorithm completes text by adding tokens which make for sensible looking text
-- without either the intent or the ability to check whether it is sensible. So appears superficially as if GPT writes intelligently,
+- without either the intent or the ability to check whether it is sensible. Superficially it appears as if GPT writes intelligently,
 when in fact it generates bullshit.
 <P>
  Likewise, given a prompt to invoke creating chess game notation (PGN code),
