--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ when in fact it generates bullshit.
 <P>
  Likewise, given a prompt to invoke creating chess game notation (PGN code),
   GPT-based chess emulators complete move sequences by adding tokens which make for sensible looking PGN code
-- without either the intent or the ability to check whether they are sensible chess moves.  
+- without either the intent or the ability to check whether they are sensible chess moves.
+  All the result presented so far indicate that, rather than the mysterious emergent chess ability some have claimed,
+  we merely see the <a href="https://garymarcus.substack.com/p/the-imminent-enshittification-of">enshittification of the Internet </a> encroaching the domain of chess. 
 </P>
 <P>
 Much of the time the moves do happen to be sensible. But that is a happenstance caused by the training corpus (which includes the Internet)
