--- a/xeets-and-that.html
+++ b/xeets-and-that.html
@@ -19,11 +19,14 @@
 
 <P>
  Slatton's narrative went: "The new model readily beats Stockfish Level 4 (1700) and still loses respectably to Level 5 (2000)."
+ Note that actual playing strength of Stockfish crucially depends on parameteters like hash size and thinking time,
+ none of which were reported.
 </P>
 
 <P>
- It was also claimed that gpt-3.5-turbo-instruct never attempts illegal moves, which is readily shown to be false.
-Chess emulators based on gpt-3.5-turbo-instruct typically spoil about 1 in 10 games.
+ It was also claimed that gpt-3.5-turbo-instruct never attempts illegal moves, which is readily shown to be false
+ - it does often make illegal moves, as a matter of fact.
+Chess emulators based on it typically spoil about 1 in 10 games.
   
 </P>
 
