--- a/xeets-and-that.html
+++ b/xeets-and-that.html
@@ -40,7 +40,7 @@ Chess emulators based on it typically spoil about 1 in 10 games.
   In 
   <a href="https://www.chess.com/analysis/library/2CL6GcjFot">
     this game
-  </a>, the bot attempts to jump over a rook by its queen: <B>Qg1</B>B>. 
+  </a>, the bot attempts to jump over a rook by its queen: <B>Qg1</B>. 
   <iframe id="11138717" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=11138717"></iframe><script>window.addEventListener("message",e=>{e['data']&&"11138717"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
 </P>
  And  
