--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ when in fact it generates bullshit.
   GPT-based chess emulators complete move sequences by adding tokens which make for sensible looking PGN code
 - without either the intent or the ability to check whether they are sensible chess moves.
   All the result presented so far indicate that, rather than the mysterious emergent chess ability some have claimed,
-  we merely see the <a href="https://garymarcus.substack.com/p/the-imminent-enshittification-of">enshittification of the Internet </a> encroaching the domain of chess. 
+  we merely see the <a href="https://garymarcus.substack.com/p/the-imminent-enshittification-of">enshittification of the Internet </a> coming to the domain of chess. 
 </P>
 <P>
 Much of the time the moves do happen to be sensible. But that is a happenstance caused by the training corpus (which includes the Internet)
@@ -31,3 +31,8 @@ Much of the time the moves do happen to be sensible. But that is a happenstance 
 <P>
  For a different perspective, see the <a href="http://blog.mathieuacher.com/GPTsChessEloRatingLegalMoves/">post by Aathieu Acher</a>, with an excellent initial summary on the topic.
 </P>
+
+<P>
+ And my own (still nascent) <a href="https://ch3cksout.github.io/xeets-and-that.html">writeup of debunking</a> is linked here.
+</P>
+
