--- a/xeets-and-that.html
+++ b/xeets-and-that.html
@@ -39,14 +39,14 @@ Chess emulators based on it typically spoil about 1 in 10 games.
 <P>
   In 
   <a href="https://www.chess.com/analysis/library/2CL6GcjFot">
-    this game
-  </a>, the bot attempts to jump over a rook by its queen: <B>Qg1</B>. 
+    this game,
+  </a> the bot attempts to jump over a rook by its queen: <B>Qg1</B>. 
   <iframe id="11138717" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=11138717"></iframe><script>window.addEventListener("message",e=>{e['data']&&"11138717"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
 </P>
  And  
   <a href="https://www.chess.com/analysis/library/3JXfH59qCz">
-    in this one
-  </a>,
+    in this one,
+  </a>
  its king blithely steps into check: <B>Kd2</B>.
 <iframe id="11138763" allowtransparency="true" frameborder="0" style="width:100%;border:none;" src="//www.chess.com/emboard?id=11138763"></iframe><script>window.addEventListener("message",e=>{e['data']&&"11138763"===e['data']['id']&&document.getElementById(`${e['data']['id']}`)&&(document.getElementById(`${e['data']['id']}`).style.height=`${e['data']['frameHeight']+30}px`)});</script>
 </P>
