--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Much of the time the moves do happen to be sensible. But that is a happenstance 
 </P>
 
 <P>
- For a different perspective, see the <a href="http://blog.mathieuacher.com/GPTsChessEloRatingLegalMoves/">post by Aathieu Acher</a>, with an excellent initial summary on the topic.
+ For a different perspective, see the <a href="http://blog.mathieuacher.com/GPTsChessEloRatingLegalMoves/">post by Mathieu Acher</a>, with an excellent initial summary on the topic.
 </P>
 
 <P>
