--- a/xeets-and-that.html
+++ b/xeets-and-that.html
@@ -82,3 +82,6 @@ Chess emulators based on it typically spoil about 1 in 10 games.
 by playing against various Stockfish levels was heavily skewed:
  performance was relatively better against weak opponents, and went sharply down against better ones.
 </P>
+
+<img src="https://www.bing.com/images/create/create-a-3d-image-of-a-chessboard2c-with-light-tan-/65353e8bb43a4f379bc371c440dbb1ae?id=rEW%2bA9RndB9vQaJfSAUYMw%3d%3d&view=detailv2&idpp=genimg&FORM=GCRIDP&mode=overlay
+" alt="misbehaving bots at malformed chessboard by Dall-E">
