--- a/index.html
+++ b/index.html
@@ -36,5 +36,5 @@ Much of the time the moves do happen to be sensible. But that is a happenstance 
  And my own (still nascent) <a href="https://ch3cksout.github.io/xeets-and-that.html">writeup of debunking</a> is linked here.
 </P>
 
-<img src="https://www.bing.com/images/create/create-a-3d-image-of-a-chessboard2c-with-light-tan-/653537856ad34db0bd19e3346a5000fb?id=PWDle8g7EewOyFt%2fp99C6w%3d%3d&view=detailv2&idpp=genimg&FORM=GCRIDP&mode=overlay
-" alt="bot at chessboard by Dall-E">
+<A href="https://www.bing.com/images/create/create-a-3d-image-of-a-chessboard2c-with-light-tan-/653537856ad34db0bd19e3346a5000fb?id=PWDle8g7EewOyFt%2fp99C6w%3d%3d&view=detailv2&idpp=genimg&FORM=GCRIDP&mode=overlay
+">  bot at chessboard by Dall-E </A>
