--- a/xeets-and-that.html
+++ b/xeets-and-that.html
@@ -83,5 +83,4 @@ by playing against various Stockfish levels was heavily skewed:
  performance was relatively better against weak opponents, and went sharply down against better ones.
 </P>
 
-<A href="https://www.bing.com/images/create/create-a-3d-image-of-a-chessboard2c-with-light-tan-/65353e8bb43a4f379bc371c440dbb1ae?id=rEW%2bA9RndB9vQaJfSAUYMw%3d%3d&view=detailv2&idpp=genimg&FORM=GCRIDP&mode=overlay
-"> misbehaving bots at malformed chessboard by Dall-E </A>
+<img src="https://gyazo.com/e592500a1a29664e7d57b0af67b3064a" alt="Chessboard_with_human+robot-DallE #chess #computer, by Dall-E">
