--- a/index.html
+++ b/index.html
@@ -36,4 +36,4 @@ Much of the time the moves do happen to be sensible. But that is a happenstance 
  And my own (still nascent) <a href="https://ch3cksout.github.io/xeets-and-that.html">writeup of debunking</a> is linked here.
 </P>
 
-<img src="ch3cksout.github.io/Chessboard_with_human+robot-DallE.jpeg" alt="Chessboard_with_human+robot-DallE #chess #computer, by Dall-E">
+<img src="https://ch3cksout.github.io/Chessboard_with_human+robot-DallE.jpeg" alt="Chessboard_with_human+robot-DallE #chess #computer, by Dall-E">
