--- a/xeets-and-that.html
+++ b/xeets-and-that.html
@@ -83,4 +83,4 @@ by playing against various Stockfish levels was heavily skewed:
  performance was relatively better against weak opponents, and went sharply down against better ones.
 </P>
 
-<img src="ch3cksout.github.io/Malformed_chessboard_2robots+fish-DallE.jpeg" alt="Malformed_chessboard_2robots+fish-DallE #computer #chess, by Dall-E">
+<img src="https://ch3cksout.github.io/Malformed_chessboard_2robots+fish-DallE.jpeg" alt="Malformed_chessboard_2robots+fish-DallE #computer #chess, by Dall-E">
